fix(preflight): probe failover runtime targets and honor explicit empty failover overrides
Implement explicit nil-vs-empty failover semantics in provider runtime resolution so  disables builtin fallback while omitted failover still inherits builtin policy.

Expand API prompt-probe target selection to include providers reachable through runtime failover chains and select failover models using runtime/candidate logic.

Pass model catalog into preflight target expansion and keep tests deterministic by setting explicit  in single-provider integration tests that are not validating failover behavior.

Pin rogue run failover policy in demo/rogue/run.yaml to kimi->[zai] and zai->[] to prevent surprise OpenAI fallback.

--- a/demo/rogue/run.yaml
+++ b/demo/rogue/run.yaml
@@ -12,6 +12,7 @@ llm:
   providers:
     kimi:
       backend: api
+      failover: [zai]
       api:
         protocol: anthropic_messages
         api_key_env: KIMI_API_KEY
@@ -20,6 +21,7 @@ llm:
         profile_family: openai
     zai:
       backend: api
+      failover: []
       api:
         protocol: openai_chat_completions
         api_key_env: ZAI_API_KEY
