skills(english-to-dotfile): keep DOT backend-agnostic and move executor policy to run-config alignment
Why:\n- The skill treated executor choice (cli vs api) as a DOT-generation concern.\n- Canonical Attractor layering states backend choice is runtime/backend policy and DOT structure should not change with backend.\n\nWhat changed:\n- Reworded skill description and usage guidance from model/executor to model/provider selection.\n- Updated Phase 0 constraints to treat backend requirements as run-config alignment, not DOT topology.\n- Renamed Phase 3 to "Select Models and Runtime Alignment".\n- Removed executor defaults from preferences guidance and deleted executor key from preferences.yaml.\n- Added explicit anti-pattern forbidding encoding backend strategy in DOT.\n- Updated pre-emit checklist language to separate provider/model constraints from runtime backend policy.\n\nResult:\n- Skill guidance now aligns with engine config model (, ) and Attractor spec backend layering without implying DOT-level executor encoding.

--- a/skills/english-to-dotfile/preferences.yaml
+++ b/skills/english-to-dotfile/preferences.yaml
@@ -1,8 +1,8 @@
 # ==========================================================================
-# Pipeline Model & Executor Preferences
+# Pipeline Model Preferences
 # ==========================================================================
 #
-# This file controls model and executor defaults for the english-to-dotfile
+# This file controls model defaults for the english-to-dotfile
 # skill when generating .dot pipeline files.
 #
 # The skill reads this file at the start of model selection.
@@ -35,23 +35,3 @@ defaults:
     hard: ""
     verify: ""
     review: ""
-
-# --------------------------------------------------------------------------
-# Executor preference
-# --------------------------------------------------------------------------
-#
-# Whether pipeline nodes should execute via CLI agents or direct API calls.
-# This is a single global setting — individual providers handle it via their
-# own CLI binaries (codex for OpenAI, claude for Anthropic, gemini for Google).
-#
-# Supported values: "cli" or "api"
-#
-# "cli" means the Attractor engine invokes a CLI agent (codex, claude, etc.)
-# that manages its own tool use, file I/O, and retries.
-#
-# "api" means the engine calls the provider's HTTP API directly and manages
-# tool use itself.
-#
-# The skill falls back to API if the preferred CLI binary isn't installed.
-
-executor: "cli"
